# AMR-IX1

./: .gitignore  README.md
src/amr_ix1_description/: CMakeLists.txt  package.xml
src/amr_ix1_description/launch/: display.launch.py
src/amr_ix1_description/meshes/collision/: B_R_W_Link.STL  cam_stand_Link.STL  camera_Link.STL  laser_Link.STL
src/amr_ix1_description/meshes/visual/: B_L_W_Link.STL  F_L_W_Link.STL  F_R_W_Link.STL  camera_Link.STL  imu_Link.STL  thermal_link.STL
src/amr_ix1_description/rviz/: amr_ix1.rviz
src/amr_ix1_description/urdf/: amr_ix1.urdf.xacro
src/amr_ix1_gazebo/: CMakeLists.txt  package.xml
src/amr_ix1_gazebo/config/: controllers.yaml
src/amr_ix1_gazebo/launch/: gazebo.launch.py
src/amr_ix1_gazebo/worlds/: amr_ix1_empty.sdf  inspection_world.sdf
src/amr_ix1_navigation/: CMakeLists.txt  package.xml
src/amr_ix1_navigation/config/: nav2_params.yaml
src/amr_ix1_navigation/launch/: navigation.launch.py
src/amr_ix1_navigation/maps/: factory_map.pgm  factory_map.yaml
src/amr_ix1_slam/: CMakeLists.txt  package.xml
src/amr_ix1_slam/config/: slam_toolbox_params.yaml
src/amr_ix1_slam/launch/: slam.launch.py
src/amr_ix1_slam/maps/: amr_ix1_map.pgm  amr_ix1_map.yaml
world/: inspection_facility.blend  inspection_facility.blend1  inspection_world.sdf
world/amr_inspection_facility/: generator.py  model.config  model.sdf
world/amr_inspection_facility/meshes/: COLUMNS.mtl  DOORS.mtl  ELEC_MCC_CAB_03_Body.mtl  EQ_01_MOTORS.mtl  EQ_01_PIPES.mtl  EQ_01_PUMPS.mtl  EQ_01_TANKS.mtl  EQ_02_ELECTRICAL.mtl  EQ_04_IBC.mtl  WINDOWS.mtl  (+13 more)
(+3 files in other folders)
